--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Avinash Gadde # your name (or website title) here
-logo: "/images/Business Profile Picture.png?raw=true" # your photo (or logo) here
+logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Edit these links below   
   <br>
