--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Avinash Gadde # your name (or website title) here
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-
+Get to know me more
   <br><br>
   <a href="https://www.linkedin.com/in/avinashgadde/">LinkedIn</a> 
   <br>
